removed __key from rule builder replaced with a computed key instead

--- a/src/style/custom/base/flexbox.sass
+++ b/src/style/custom/base/flexbox.sass
@@ -40,4 +40,7 @@ $flex-content: (baseline, center, end, flex-end, flex-start, initial, inherit, l
   flex-direction: column
   flex-wrap: wrap
 
-
+.is-flex-spacer
+  flex: auto 1 1
+  width: 0
+  height: 0
